<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imagem_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagem_logo"/>

    <EditText
        android:id="@+id/editText_senha"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/editText_senha_again"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_senha"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_senha_again"
        android:layout_marginTop="55dp"
        android:text="@string/button_signup"
        android:textAllCaps="true"
        android:background="@color/gray"/>



</androidx.constraintlayout.widget.ConstraintLayout>