<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/empty_profile"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/button_change_photo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="75dp"
        android:text="@string/change_photo_button"
        android:textAllCaps="true"
        android:background="@color/gray"/>

    <EditText
        android:id="@+id/editText_name_user"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_change_photo"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editText_complete_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_complete_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name_user"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/button_save_photo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_complete_name"
        android:layout_marginTop="50dp"
        android:text="@string/save_changes_button"
        android:textAllCaps="true"
        android:background="@color/gray"/>


</androidx.constraintlayout.widget.ConstraintLayout>