<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_post"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/empty_profile"/>

    <Button
        android:id="@+id/button_change_image_post"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_post"
        android:layout_marginTop="10dp"
        android:text="@string/button_photo_post"
        android:textAllCaps="true"
        android:background="@color/gray"/>

    <EditText
        android:id="@+id/editText_post"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_change_image_post"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_post"/>

    <Button
        android:id="@+id/button_save_post"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_post"
        android:layout_marginTop="200dp"
        android:text="@string/button_save_post"
        android:textAllCaps="true"
        android:background="@color/gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>